--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -7,6 +7,21 @@ sonar.projectVersion=1.0
 
 # Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
 sonar.sources=.
+sonar.exclusions=**/*_test.go,**/vendor/**
+
+sonar.tests=.
+sonar.test.inclusions=**/*_test.go
+sonar.test.exclusions=**/vendor/**
 
 # Encoding of the source code. Default is default system encoding
 sonar.sourceEncoding=UTF-8
+
+# =====================================================
+#   Properties specific to Go
+# =====================================================
+
+sonar.go.gometalinter.reportPaths=gometalinter-report.out
+#sonar.go.govet.reportPaths=govet-report.out
+#sonar.go.golint.reportPaths=golint-report.out
+sonar.go.tests.reportPaths=report.json
+sonar.go.coverage.reportPaths=coverage.out
