--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -7,7 +7,7 @@ sonar.projectVersion=1.0
 
 # Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
 sonar.sources=.
-sonar.exclusions=**/*_test.go,**/vendor/**
+sonar.exclusions=**/vendor/**
 
 sonar.tests=.
 sonar.test.inclusions=**/*_test.go
