--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -16,6 +16,9 @@ sonar.test.exclusions=**/vendor/**
 # Encoding of the source code. Default is default system encoding
 sonar.sourceEncoding=UTF-8
 
+# baseline
+sonar.pullrequest.base=master
+
 # =====================================================
 #   Properties specific to Go
 # =====================================================
